--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "express": "3.5.0",
     "jade": "*",
-    "less-middleware": "*"
+    "less-middleware": "*",
+    "redis": "^0.10.1",
+    "nohm": "^0.9.5"
   }
 }
