--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "redis": "^0.10.1",
     "nohm": "^0.9.5",
     "express-less-middleware": "^1.1.2",
-    "mongoose": "^3.8.8"
+    "mongoose": "^3.8.8",
+    "async": "^0.2.10"
   },
   "devDependencies": {
     "mocha": "^1.17.1",
-    "gulp-mocha": "^0.4.1"
+    "gulp-mocha": "^0.4.1",
+    "should": "^3.1.3",
+    "supertest": "^0.9.0"
   }
 }
