--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
   "dependencies": {
     "express": "3.5.0",
     "jade": "*",
-    "less-middleware": "*",
-    "redis": "^0.10.1",
-    "nohm": "^0.9.5",
     "express-less-middleware": "^1.1.2",
     "mongoose": "^3.8.8",
     "async": "^0.2.10",
@@ -20,6 +17,9 @@
     "mocha": "^1.17.1",
     "gulp-mocha": "^0.4.1",
     "should": "^3.1.3",
-    "supertest": "^0.9.0"
+    "supertest": "^0.9.0",
+    "gulp": "^3.5.5",
+    "gulp-nodemon": "^1.0.2",
+    "gulp-jshint": "^1.5.0"
   }
 }
