--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "express-less-middleware": "^1.1.2",
     "mongoose": "^3.8.8",
     "async": "^0.2.10",
-    "validator": "^3.5.0"
+    "validator": "^3.5.0",
+    "nodemailer": "^0.6.1"
   },
   "devDependencies": {
     "mocha": "^1.17.1",
