--- a/bower.json
+++ b/bower.json
@@ -7,5 +7,8 @@
   ],
   "description": "Like gravatar, for coins !",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "bootstrap": "~3.1.1",
+  }
 }
