--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "async": "^0.2.10",
     "validator": "^3.5.0",
     "nodemailer": "^0.6.1",
-    "express-namespace": "^0.1.1"
+    "express-namespace": "^0.1.1",
+    "gulp-coffee": "^1.4.1",
+    "gulp-util": "^2.2.14"
   },
   "devDependencies": {
     "mocha": "^1.17.1",
