--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "nodemailer": "^0.6.1",
     "express-namespace": "^0.1.1",
     "gulp-coffee": "^1.4.1",
-    "gulp-util": "^2.2.14"
+    "gulp-util": "^2.2.14",
+    "request": "^2.34.0"
   },
   "devDependencies": {
     "mocha": "^1.17.1",
